duicontrolpanel (0.8.6~unreleased) unstable; urgency=low

  * Fixes: NB#178164 - The using AP is displayed inconsistently on
    Settings page
  * Implements support for the new applet briefwidget (switch type)
  * Fixes: NB#182605 - multiple instances of DCP can be opened at the
    same time

 -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 29 Jul 2010 16:04:52 +0200

duicontrolpanel (0.8.5) unstable; urgency=low

  [ Robert Manner ]
  * Fixes: height of contentitems are non constant
  * Fixes: NB#178814 -  Icon is not shown in the applet's brief
  * Fixes: NB#173756 - The order of the items in recently used list is
    not same after the device reboot
  * Fixes: NB#180202 - Default value for DcpBrief is deprecated
  * Fixes: NB#180332 - Control panel applets: Way to load multiple
    catalogs needed

  [ Viktor Nagy ]
  * Fixes: NB#180791 - Invalid libs-pkg in duicontrolpanel API file
  [ Laszlo Gal]
  * most used does not count button type applets like offline applet

 -- Laszlo Gal <laszlo.gal@blumsoft.eu>  Thu, 22 Jul 2010 17:33:19 +0200

duicontrolpanel (0.8.4) unstable; urgency=low

  * Some margin fixes
  * Fixes: NB#170026 - Emitting valuesChanged signal doesn't update
    valueText displayed in Brief (removes the workaround, because bug got fixed)
  * Fixes: NB#176941 -  duicontrolpanel crash blocks systemui-applets-ui-tests

 -- Robert Manner <robert.manner@blumsoft.eu>  Mon, 28 Jun 2010 13:33:01 +0200

duicontrolpanel (0.8.3) unstable; urgency=low

  [ Laszlo Gal]
  * Added api file to debian directory

  [ Robert Manner ]
  * Fixed compilation warnings

 -- Laszlo Gal <laszlo.gal@blumsoft.eu>  Mon, 21 Jun 2010 12:10:33 +0200

duicontrolpanel (0.8.2) unstable; urgency=low

  * new version

 -- Laszlo Gal <laszlo.gal@blumsoft.eu>  Mon, 20 Jun 2010 10:32:00 +0200

duicontrolpanel (0.8.2~unreleased) unstable; urgency=low

  * new version

 -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 10 Jun 2010 18:50:33 +0200
